cartopy/docs/v0.16/_sources/gallery/global_map.rst.txt


.. _sphx_glr_gallery_global_map.py:


Global Map
----------

An example of a simple map that compares Geodetic and Plate Carree lines
between two locations.





.. image:: /gallery/images/sphx_glr_global_map_001.png
    :align: center





.. code-block:: python



    import matplotlib.pyplot as plt

    import cartopy.crs as ccrs


    def main():
        fig = plt.figure(figsize=(10, 5))
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.Robinson())

        # make the map global rather than have it zoom in to
        # the extents of any plotted data
        ax.set_global()

        ax.stock_img()
        ax.coastlines()

        ax.plot(-0.08, 51.53, 'o', transform=ccrs.PlateCarree())
        ax.plot([-0.08, 132], [51.53, 43.17], transform=ccrs.PlateCarree())
        ax.plot([-0.08, 132], [51.53, 43.17], transform=ccrs.Geodetic())

        plt.show()


    if __name__ == '__main__':
        main()

**Total running time of the script:** ( 0 minutes  4.729 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: global_map.py <global_map.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: global_map.ipynb <global_map.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
